# learning-python

./: .gitignore  change-19.txt  change-20.txt  pyproject.toml  test-08.txt  test-16.txt  test-19.txt  test-20.txt  test-40.txt
.devcontainer/: Dockerfile  devcontainer.json
learning_python/: coordinator.py  main.py  sso.py  statistics.py  storage.py  types.py  unsplash.py  utils.py  workers.py
tests/: main_test.py
