[tool.poetry]
version = "0.0.0"
name = "learning-python"
description = "learning-python"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
ingest = "learning_python.main:ingest"
count = "learning_python.main:count"
rows = "learning_python.main:rows"
distinct = "learning_python.main:distinct"
order_by = "learning_python.main:order_by"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.12"
click = "8.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "1.2.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.mypy]
check_untyped_defs = true

[tool.black]
line-length = 119

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
