[tool.poetry]
version = "0.0.0"
name = "learning-python"
description = "learning-python"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
gpt = "learning_python.main:gpt"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
click = "^8.1.4"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.mypy]
check_untyped_defs = true

[tool.black]
line-length = 119

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
