[tool.poetry]
version = "0.0.0"
name = "learning-python"
description = "learning-python"
authors = ["Adrian Macal <adma@amacal.pl>"]

[tool.poetry.scripts]
chunk = "learning_python.main:chunk"
diff = "learning_python.main:diff"
reconstruct = "learning_python.main:reconstruct"
simulate = "learning_python.main:simulate"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
click = "^8.1.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.mypy]
check_untyped_defs = true

[tool.black]
line-length = 119

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116"
